feat: enhance learning kit invitation email with password generation and improved content